# Gtest

./: .coveralls.yml  .travis.yml  CMakeLists.txt  GoTest.pro  README.md  sonar-project.properties
.github/workflows/: build.yml
app/: app.pro  calc.c  calc.h  func.cpp  func.h  main.cpp
docs/: descriptions.md  errors.md
tests/: fibonachi_test.h  main.cpp  tests.pro  tst_fun.h  tst_stdout.h  tst_test1.h
